--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
+							<li><a href="mytraq.html">My Traq</a></li>
 							<li><a href="mycheckings.html">My Checkings</a></li>
 							<li><a href="mycards.html">My Cards</a></li>
 							<li><a href="mypush.html">My Push</a></li>
@@ -48,10 +49,21 @@
 						<div class="inner">
 							<header>
 								<h1>Repositorio de ficheros APK para plataformas Android<br /></h1>
-								<p>Seleccione el proyecto:</p>
+								<!--p>Seleccione el proyecto:</p-->
 							</header>
 							<section class="tiles">
 								<article class="style1">
+									<span class="image">
+										<img src="images/icon_mynotifications.png" alt="" />
+									</span>
+									<a href="mytraq.html">
+										<h2>My Traq</h2>
+										<div class="content">
+											<p>Descripción de la aplicación</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
 									<span class="image">
 										<img src="images/icon_mycheckings.png" alt="" />
 									</span>
@@ -62,7 +74,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style3">
 									<span class="image">
 										<img src="images/icon_mycards.png" alt="" />
 									</span>
@@ -73,7 +85,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style4">
 									<span class="image">
 										<img src="images/icon_mynotifications.png" alt="" />
 									</span>
@@ -94,7 +106,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
+							<!--section>
 								<h2>Contactenos</h2>
 								<form method="post" action="#">
 									<div class="field half first">
@@ -110,7 +122,7 @@
 										<li><input type="submit" value="Enviar" class="special" /></li>
 									</ul>
 								</form>
-							</section>
+							</section-->
 							<section>
 								<h2>Siguenos</h2>
 								<ul class="icons">
