Your commit is writing checks your merge can't cash.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/icon_mynotifications.png" alt="" />
+										<img src="images/icon_mytraq.png" alt="" />
 									</span>
 									<a href="mytraq.html">
 										<h2>My Traq</h2>
