--- a/mytraq.html
+++ b/mytraq.html
@@ -28,7 +28,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/icon_mynotifications.png" alt="" /></span><span class="title">Kyros LBS - My Traq</span>
+									<span class="symbol"><img src="images/icon_mytraq.png" alt="" /></span><span class="title">Kyros LBS - My Traq</span>
 								</a>
 
 							<!-- Nav -->
