--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="mytraq.html">My Traq</a></li>
+							<li><a href="mytraq.html">My TracK</a></li>
 							<li><a href="mycheckings.html">My Checkings</a></li>
 							<li><a href="mycards.html">My Cards</a></li>
 							<li><a href="mypush.html">My Push</a></li>
@@ -57,7 +57,7 @@
 										<img src="images/icon_mytraq.png" alt="" />
 									</span>
 									<a href="mytraq.html">
-										<h2>My Traq</h2>
+										<h2>My TracK</h2>
 										<div class="content">
 											<p>Descripción de la aplicación</p>
 										</div>
