--- a/mytraq.html
+++ b/mytraq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>My Push</title>
+		<title>My Track</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -46,7 +46,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="mytraq.html">My Traq</a></li>
+							<li><a href="mytraq.html">My TracK</a></li>
 							<li><a href="mycheckings.html">My Checkings</a></li>
 							<li><a href="mycards.html">My Cards</a></li>
 							<li><a href="mypush.html">My Push</a></li>
@@ -56,6 +56,18 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
+							<h1>Documentación:</h1>
+							<table class="tg">
+							<tr>
+							    <th class="tg-031e">Documento</th>
+							    <th class="tg-yw4l">Fecha</th>
+							</tr>
+							<tr>
+							    <td class="tg-yw4l"><a href="./MyTraQ-Manual_de_usuario_v1_0.pdf">Manual de usuario</a></td>
+							    <td class="tg-yw4l">15/03/2017</td>
+							</tr>
+							</table>
+
 							<h1>Versiones disponibles:</h1>
 
 							<table class="tg">
