--- a/mycheckings.html
+++ b/mycheckings.html
@@ -46,7 +46,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="mytraq.html">My Traq</a></li>
+							<li><a href="mytraq.html">My TracK</a></li>
 							<li><a href="mycheckings.html">My Checkings</a></li>
 							<li><a href="mycards.html">My Cards</a></li>
 							<li><a href="mypush.html">My Push</a></li>
